--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Sistema de gestión para Mototransporte Satélite - Transporte Escolar Local">
     <meta name="keywords" content="transporte escolar, mototransporte, gestión escolar">
     <meta name="author" content="Mototransporte Satélite">
@@ -258,7 +258,7 @@
                 <p>Scrum Master: Alexanders Estrada Paredes</p>
                 <p>Desarrolladores: Daniela Nina Chambi,</p> 
                 <p>Kenia Mariana Chavez Rivero,</p>
-                     <p>Matias Cano Ávila </p>
+                <p>Matias Cano Ávila</p>
                 <p>Desarrollado con <i class="fas fa-heart"></i> para la comunidad educativa</p>
             </div>
         </div>
